test/vim-xire/vim-hello.xire
; "Hello world" in xire.

(echo "Hello")
(echo 'World)
(echo 142857)

(echo "Hello" 'World 142857)

(echo "'\"\n\r\\")

; vim: filetype=scheme
